syntax = "proto3";
package protocol;
message User {
  string userName = 1;
  string userPwd = 2;
  int32 userID = 3;//用户唯一标识
  
  //用户信息
}
message Msg {
	string msg = 1;
	//一些消息的其他属性
}
message DstUser {
  repeated User dst = 1;
}
message File {
  string fileName = 1;//文件名
  string fileFeature = 2;//文件指纹
  string fileParam = 3;//文件参数
  int32 fileType = 4;//文件类型
}
message Action {
	int32 rslCode=1;//状态码
    int32 actionType=2;//行为码
}
//登录，注册，添加好友，删除好友，发送消息
message Frame {
  int32 protoSign = 1;
  int64 msgLength = 2;
  int32 msgType = 3 ;
  int64 senderTime = 4;
  
  User src = 5;
  DstUser dst = 6;
  Msg msg = 7;

  File fileInfo = 8;
  
  Action fbAction = 9;
}